# opencode-tokenstats

./: .codegraphrc.json  .gitignore  Makefile  README.md  mcp.json  pyproject.toml
.jcodemunch-index/: config.jsonc
src/opencode_tokenstats/: __init__.py  activity_classifier.py  canonical_metrics.py  cli.py  client.py  compatibility.py  content_attribution.py  cost.py  local_session_service.py  pricing.py  renderer.py  report_schema.py  session_service.py  telemetry.py  tokenization.py
tests/: test_activity_classifier.py  test_canonical_metrics.py  test_cli_core_contribution.py  test_cli_doctor.py  test_cli_health.py  test_cli_help_docs.py  test_cli_reports.py  test_client.py  test_compatibility.py  test_content_attribution.py  test_cost.py  test_local_session_service.py  test_parity_prom_sample.py  test_pricing.py  test_renderer_formatting.py  test_report_schema.py  test_session_service.py  test_task11_fixture_coverage.py  test_task8_golden_parity.py  test_telemetry.py  test_tokenization.py  test_warmup_parallel.py
tests/fixtures/: golden_report_daily.json  session_messages_api_sample.json  session_messages_api_sample_anthropic.json  session_messages_api_sample_openai_zero_cost.json
