[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-tokenstats"
version = "0.1.0"
description = "API-first OpenCode TokenStats CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
octoken = "opencode_tokenstats.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
